--- a/.env
+++ b/.env
@@ -30,3 +30,10 @@ APP_SECRET=494addec1f8b6556f0b5625238d8d55d
  DATABASE_URL="mysql://root:@127.0.0.1:3306/fetes_un_voeu?serverVersion=10.4.18-MariaDB"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
