--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -51,7 +51,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/profile, roles: [ROLE_USER, ROLE_ADMIN] }
+        - { path: ^/profil, roles: [ROLE_USER, ROLE_ADMIN] }
         - { path: ^/inscription, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
